--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -46,7 +46,7 @@ jobs:
             type=sha,suffix=${{ matrix.feature_set }}
             type=ref,event=branch,suffix=${{ matrix.feature_set }}
             type=raw,value=${{ matrix.feature_set }},enable={{is_default_branch}}
-            type=raw,value=latest,enable=${{ matrix.feature_set == 'full' && is_default_branch }}
+            type=raw,value=latest,enable=${{ matrix.feature_set == 'full' && format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
