--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -41,7 +41,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.IMAGE_NAME }}
+          images: ${{ vars.DOCKERHUB_IMAGENAME }}
           tags: |
             type=sha,suffix=${{ matrix.feature_set }}
             type=ref,event=branch,suffix=${{ matrix.feature_set }}
