--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -43,8 +43,8 @@ jobs:
         with:
           images: ${{ vars.DOCKERHUB_IMAGENAME }}
           tags: |
-            type=sha,suffix=${{ matrix.feature_set }}
-            type=ref,event=branch,suffix=${{ matrix.feature_set }}
+            type=sha,suffix=-${{ matrix.feature_set }}
+            type=ref,event=branch,suffix=-${{ matrix.feature_set }}
             type=raw,value=${{ matrix.feature_set }},enable={{is_default_branch}}
             type=raw,value=latest,enable=${{ matrix.feature_set == 'full' && format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
 
